@@ -40,9 +40,9 @@ import org.springframework.stereotype.Component;
 
 import javax.activation.MimetypesFileTypeMap;
 import javax.xml.bind.DatatypeConverter;
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -309,7 +309,7 @@ public class ThemeServiceImpl extends AbstractService implements ThemeService {
     public String getDefinition(String path) {
         try {
             ObjectMapper objectMapper = new ObjectMapper();
-            String json = Files.readString(Path.of(path), defaultCharset());
+            String json = new String(Files.readAllBytes(new File(path).toPath()), defaultCharset());
             // Important for remove formatting (space, line break...)
             JsonNode jsonNode = objectMapper.readValue(json, JsonNode.class);
             return jsonNode.toString();
@@ -331,7 +331,7 @@ public class ThemeServiceImpl extends AbstractService implements ThemeService {
     private String getImage(String filename) {
         String filepath = themesPath + "/default/" + filename;
         try {
-            byte[] image = Files.readAllBytes(Path.of(filepath));
+            byte[] image = Files.readAllBytes(new File(filepath).toPath());
             MimetypesFileTypeMap fileTypeMap = new MimetypesFileTypeMap();
             return "data:" + fileTypeMap.getContentType(filename) + ";base64," + Base64.getEncoder().encodeToString(image);
         } catch (IOException ex) {
